Add base attribute to racks
* makes it easier to specify urls relative to a common base url

  For example, given the following rackml, the generated svg will
  link the server to https://kb/device/MachineName.

  <racks base="https://kb/device/">
    <rack>
      <server href="MachineName" />
    </rack>
  </racks>

--- a/syntax.html
+++ b/syntax.html
@@ -11,6 +11,13 @@
 
     <h2><tt>&lt;racks&gt;</tt></h2>
 
+    <p>A <tt>&lt;racks&gt;</tt> element may contain any of the following attributes:</p>
+
+    <dl>
+      <dt><tt>base</tt></dt>
+      <dd>The base URL to use for links</dd>
+    </dl>
+
     <p>The <tt>&lt;racks&gt;</tt> element contains zero or more <tt>&lt;racks&gt;</tt> elements.</p>
 
     <h2><tt>&lt;rack&gt;</tt></h2>
