Update example rackml

--- a/index.html
+++ b/index.html
@@ -29,30 +29,30 @@
         </div>
       </div>
 
-      <div id="editor" name="rackml">&lt;racks&gt;
+      <div id="editor" name="rackml">&lt;racks base=&quot;https://kb.examle.com/page/&quot;&gt;
   &lt;rack height=&quot;42&quot; name=&quot;Example&quot;&gt;
     &lt;patch&gt;Patch&lt;/patch&gt;
-    &lt;cables&gt;&lt;/cables&gt;
-    &lt;switch&gt;switch&lt;/switch&gt;
-    &lt;cables&gt;&lt;/cables&gt;
-    &lt;patch&gt;Patch&lt;/patch&gt;
-    &lt;cables&gt;&lt;/cables&gt;
+    &lt;cables&gt;Cables&lt;/cables&gt;
     &lt;switch&gt;Switch&lt;/switch&gt;
-    &lt;cables&gt;&lt;/cables&gt;
-    &lt;firewall href=&quot;https://kb/firewall-name&quot;&gt;Firewall&lt;/firewall&gt;
-    &lt;cables&gt;&lt;/cables&gt;
-    &lt;firewall href=&quot;https://kb/firewall-name&quot;&gt;Firewall&lt;/firewall&gt;
-    &lt;cables at=&quot;31&quot;&gt;&lt;/cables&gt;
+    &lt;cables&gt;Cables&lt;/cables&gt;
+    &lt;patch&gt;Patch&lt;/patch&gt;
+    &lt;cables&gt;Cables&lt;/cables&gt;
+    &lt;switch&gt;Switch&lt;/switch&gt;
+    &lt;cables&gt;Cables&lt;/cables&gt;
+    &lt;firewall href=&quot;firewall-01&quot;&gt;Firewall&lt;/firewall&gt;
+    &lt;cables&gt;Cables&lt;/cables&gt;
+    &lt;firewall href=&quot;firewall-02&quot;&gt;Firewall&lt;/firewall&gt;
+    &lt;cables at=&quot;31&quot;&gt;Cables&lt;/cables&gt;
     &lt;monitor height=&quot;8&quot;&gt;Monitor&lt;/monitor&gt;
     &lt;keyboard&gt;Keyboard&lt;/keyboard&gt;
     &lt;kvm&gt;KVM&lt;/kvm&gt;
     &lt;blank height=&quot;2&quot;/&gt;
-    &lt;server height=&quot;4&quot; href=&quot;https://kb/server-name&quot;&gt;Server&lt;/server&gt;
-    &lt;san height=&quot;2&quot; href=&quot;https://kb/san&quot;&gt;SAN&lt;/san&gt;
-    &lt;server href=&quot;https://kb/server-name&quot; height=&quot;4&quot;&gt;Server&lt;/server&gt;
+    &lt;server height=&quot;2&quot; href=&quot;server-01&quot;&gt;Server&lt;/server&gt;
+    &lt;san height=&quot;2&quot; href=&quot;san-01&quot;&gt;Storage Area Network&lt;/san&gt;
+    &lt;server href=&quot;server-02&quot; height=&quot;4&quot;&gt;Server&lt;/server&gt;
     &lt;gap height=&quot;2&quot;/&gt;
-    &lt;pdu&gt;&lt;/pdu&gt;
-    &lt;ups height=&quot;4&quot;&gt;UPS&lt;/ups&gt;
+    &lt;pdu&gt;Power Distribution Unit&lt;/pdu&gt;
+    &lt;ups height=&quot;4&quot;&gt;Power Supply&lt;/ups&gt;
   &lt;/rack&gt;
 &lt;/racks&gt;</div>
     </div>
