Add <tape> element to represent tape drives

--- a/syntax.html
+++ b/syntax.html
@@ -70,6 +70,9 @@
       <dt>&lt;switch&gt;</dt>
       <dd>Represents a networking switch</dd>
 
+      <dt>&lt;tape&gt;</dt>
+      <dd>Represents a tape drive</dd>
+
       <dt>&lt;ups&gt;</dt>
       <dd>Represents an uninterruptable power supply</dd>
     </dl>
